# wrapid

./: README.md  elm-package.json  index_profile.html  package.json  stack.yaml  wrapid-api-upload.cabal
api-docs/: app.js  package.json
api-docs/api/controllers/: hello_world.js
api-docs/api/swagger/: swagger.json  swagger.yaml
back-end/: README.md
back-end/api/: .gitignore  Dockerfile  README.md  config.yaml  docker-entrypoint.sh  stack.yaml  swagger.json  wrapid-api.cabal
back-end/api-upload/: Dockerfile  LICENSE  README.md  access  docker-entrypoint.sh  stack.yaml  wrapid-api-upload.cabal
back-end/api-upload/src/: Api.hs  Db.hs  Main.hs
back-end/api-upload/test/: main.sh  skin-test.csv  test-dev.sh  test.sh
back-end/api/src/: Api.hs  Db.hs
back-end/api/src/Types/: Config.hs  User.hs
back-end/app/: Dockerfile  LICENSE  README.md  docker-entrypoint.sh  frontend  stack.yaml  wrapid-app.cabal
back-end/app/snaplets/postgresql-simple/: devel.cfg
back-end/app/src/: Application.hs  Handler.hs  Main.hs
back-end/common/: LICENSE  common.cabal  stack.yaml
back-end/common/src/: Common.hs
back-end/common/src/Common/Types/: Activity.hs  Extra.hs  Schedule.hs  Skin.hs  User.hs  Wrap.hs
back-end/common/src/Common/Utils/: Basic.hs
back-end/ops/: docker-compose-cert.yaml  docker-compose-db.yaml  docker-compose.yaml
back-end/ops/nginx/: Dockerfile  README.md  docker-entrypoint.sh  nginx.conf
back-end/ops/nginx/conf/: api.runabetterset.com.conf  dev.wrapid.runabetterset.com.conf
back-end/ops/nginx/conf_back/: default.conf
back-end/ops/nginx/keys/runabetterset.api/: fullchain.pem  key.pem
back-end/ops/nginx/keys/runabetterset.wrapid.dev/: fullchain.pem  key.pem
config/: webpack.common.js
db/: README.md
db/mutations/insert/: add_extra_schedule_event.sql  create_meal.sql  create_skin.sql  upload_skin.sql
db/mutations/update/: set_user_profile_photo.sql
db/queries/: get_all_daily_live_extra_activity.sql  get_daily_skin.sql  get_extra_schedule.sql  get_user_profile_photo.sql
db/tables/: drop_all.sql  owner-change.sql  table_DDL.sql
front-end/: .firebaserc  .gitignore  README.md  package.json
front-end/config/: webpack.dev.js
front-end/src/: Ports.elm  Types.elm  View.elm  gqlClient.js  index.html  index.js
front-end/src/Assets/Icons/: CheckedCircleIcon.elm  ForwardArrow.elm  WrapDirectorIcon.elm
front-end/src/Client/ExtraPortal/: ExtraPortal.elm  Types.elm
front-end/src/Client/ExtraPortal/Pages/: ProfileWizard.elm
front-end/src/Client/Generic/Authentication/Login/: Types.elm  View.elm
front-end/src/Client/Generic/Breakdown/: ModelTypes.elm
front-end/src/Client/Generic/Dashboard/: Dashboard.elm  IconBell.elm  LeftSideMenu.elm  WrapidLogo.elm
front-end/src/Client/Generic/Skin/: SkinViewer.elm
front-end/src/Client/Generic/Status/: Error.elm
front-end/src/Client/Generic/Styles/: Colors.elm  Types.elm
front-end/src/Client/Generic/WebForm/: Types.elm  Utils.elm
front-end/src/Client/PAPortal/: HorizontalCalendar.elm  State.elm  Types.elm  View.elm
front-end/src/Client/PAPortal/Pages/: LiveMonitor.elm  Schedule.elm  SkinManager.elm  SkinUploadPage.elm  Wrap.elm
front-end/src/Client/PAPortal/Pages/Schedule/: Message.elm  Model.elm  Name.elm  Person.elm  Prop.elm  Renderable.elm  Role.elm  Schedule.elm  Task.elm  TestSchedule.elm  Update.elm  View.elm
front-end/src/Client/PAPortal/Pages/Schedule/Task/: Description.elm  Extra.elm  Setting.elm  Time.elm  TimeOfDay.elm  Title.elm  Type.elm  Type.elm~  Types.elm
front-end/src/Client/PAPortal/Pages/SkinManagers/: AddRoles.elm
front-end/src/Client/Utilities/: DateTime.elm
front-end/src/Client/WardrobePortal/: Ports.elm  View.elm
front-end/src/Common/: DataWidget.elm  Helpers.elm  Navbar.elm  Renderable.elm  Styles.elm
front-end/src/Common/Styles/: ButtonStyles.elm
front-end/src/Common/Types/: DateTime.elm  Extra.elm  Production.elm  Skin.elm  User.elm
front-end/src/Server/API/Mutations/: Avatar.elm  SkinMutations.elm
front-end/src/Server/API/Queries/: PAPortalQueries.elm
front-end/tests/Client/PAPortal/Pages/: SkinManagerTests.elm
src/: Api.hs  Db.hs  Main.elm  Main.hs  Ports.elm  State.elm  Types.elm  View.elm  gqlClient.js  index.html  index.js
src/Assets/Icons/: SearchIcon.elm
src/Client/ExtraPortal/: ExtraPortal.elm  ExtraWardrobeStatus.elm  NotificationBar.elm  Schedule.elm  Types.elm
src/Client/ExtraPortal/Pages/: DailyMonitor.elm  FormStatusPage.elm  ProfileWizard.elm
src/Client/Generic/Animation/: FadeInUp.Elm
src/Client/Generic/Authentication/Login/: Login.elm  State.elm  Types.elm  View.elm
src/Client/Generic/Dashboard/: Dashboard.elm  HamburgerMenu.elm  IconBell.elm  WrapidLogo.elm
src/Client/Generic/Skin/: BulkRowCreator.elm  ModelTypes.elm
src/Client/Generic/Status/: Loading.elm
src/Client/Generic/Types/: ModelTypes.elm
src/Client/Generic/WebForm/: Types.elm
src/Client/PAPortal/: HorizontalCalendar.elm  PAPortal.elm  State.elm  Types.elm  View.elm
src/Client/PAPortal/Pages/: LiveMonitor.elm  Schedule.elm  SkinManager.elm  SkinUploadPage.elm  Wrap.elm
src/Client/PAPortal/Pages/Schedule/: Model.elm  Update.elm  View.elm
src/Client/PAPortal/Pages/SkinManagers/: AddRoles.elm  Types.elm
src/Client/Profile/: Main.elm  Ports.elm
src/Client/WardrobePortal/: Decoders.elm  Ports.elm  State.elm  Types.elm  View.elm
src/Common/: Navbar.elm  Styles.elm  WrapidLogo.elm
src/Common/Styles/: TextStyles.elm
src/Server/API/Mutations/: SkinMutations.elm
src/Server/API/Queries/: Authentication.elm  ExtraPortalQueries.elm
src/Types/: Config.hs
tests/: Tests.elm  elm-package.json
tests/Client/PAPortal/Pages/: SkinManagerTests.elm
