name:                wrapid-api-upload
version:             0.1.0.1
synopsis:            Wrapid image uploading microservice
description:         Please see README.md
homepage:            https://bitbucket.com/sigrlami/wrapid-api-upload#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2017, RunaBetterSet, Inc
                                (c) 2016, Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable wrapid-api-upload
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Api
                     , Db
                     , Types.Config
  build-depends:       base                   >= 4
               ,       common
               ,       aeson                  >= 0.1.11.4
               ,       servant                >= 0.6
               ,       servant-server
               ,       servant-auth
               ,       servant-auth-server
               ,       servant-multipart      
               ,       swagger2      
               ,       postgresql-simple
               ,       wai
               ,       wai-extra
               ,       wai-cors       
               ,       warp      
               ,       optparse-applicative                      
               ,       aws      
               ,       uuid
               ,       text
               ,       lens
               ,       bytestring
               ,       time
               ,       mtl
               ,       safe
               ,       yaml      
               ,       http-client
               ,       http-types
               ,       http-conduit      
               ,       lens-aeson
               ,       directory
               ,       filepath
               ,       unix
               ,       resourcet
               ,       cassava
               ,       vector      
  default-extensions:  OverloadedStrings
                    ,  TemplateHaskell
  other-extensions:    ScopedTypeVariables
                    ,  FlexibleContexts
                    ,  DeriveGeneric

  GHC-options: -threaded -O2

  default-language:    Haskell2010

