name:                wrapid-api
version:             0.1.0.0
synopsis:            Wrapid common microservice
description:         Please see README.md
homepage:            https://github.com/smaccoun/wrapid
license:             AllRightsReserved
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2017, RunaBetterSet, Inc
                                (c) 2016, Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable wrapid-api
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Api
                     , Db
                     , Types.Config
                     , Types.User
  build-depends:       base                   >= 4
               ,       common
               ,       aeson                  >= 0.1.11.4
               ,       servant                >= 0.6
               ,       servant-server
               ,       servant-auth
               ,       servant-auth-server
               ,       servant-multipart      
               ,       swagger2      
               ,       postgresql-simple
               ,       wai
               ,       wai-extra
               ,       wai-cors       
               ,       warp      
               ,       optparse-applicative                      
               ,       aws      
               ,       uuid
               ,       text
               ,       lens
               ,       bytestring
               ,       time
               ,       mtl
               ,       safe
               ,       yaml      
               ,       http-client
               ,       http-types
               ,       http-conduit      
               ,       lens-aeson
               ,       directory
               ,       filepath
               ,       unix
               ,       resourcet
               ,       data-default
               ,       http-api-data            
  default-extensions:  OverloadedStrings
                    ,  TemplateHaskell
  other-extensions:    ScopedTypeVariables
                    ,  FlexibleContexts
                    ,  DeriveGeneric

  GHC-options: -threaded -O2

  default-language:    Haskell2010

