name:                common
version:             0.1.0.0
synopsis:
description:         Please see README.md
homepage:            
license:             AllRightsReserved
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2017 RunaBetterSet, LLC
                                (c) 2017 Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common
                 ,     Common.Types.User
                 ,     Common.Types.Extra
                 ,     Common.Utils.Basic

  build-depends:       base >= 4.7 && < 5
               ,       aeson >= 0.1.11.4
               ,       blaze-builder
               ,       uuid
               ,       text
               ,       lens
               ,       bytestring
               ,       postgresql-simple
               ,       time
               ,       mtl
               ,       transformers
               ,       template-haskell
               ,       random
               ,       lens-aeson
               ,       unordered-containers
               ,       cassava
               ,       vector
               ,       split
               ,       stm
               ,       safe
               ,       MissingH
               ,       curl
               ,       pcre-heavy
               ,       yaml
               ,       tuple
               ,       data-default      
               ,       containers
               ,       MonadRandom
               ,       text-format
               ,       utf8-string
               ,       cassava
               ,       unix
               ,       directory
               ,       filepath
               ,       attoparsec
               ,       http-api-data
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/smaccoun/wrapid
